# simple-diff

./: .gitignore  CMakeLists.txt  LICENSE  README.md  diff.cpp  patch.cpp
src/: CMakeLists.txt  diff_computation.cpp  diff_serialization.cpp  longest_common_sub_sequence.cpp  simple_diff.h
test/: CMakeLists.txt  diff_computation_tests.cpp  longest_common_sub_sequence_tests.cpp
